--- a/positivus_Landing_Page/landing_Page.css
+++ b/positivus_Landing_Page/landing_Page.css
@@ -848,6 +848,10 @@ input[type="radio"] {
     font-size: 18px;
     margin-top: 10px;
   }
+  #myEmail{
+    color: #FFFFFF;
+    font-size: 18px;
+  }
   .em{
     font-size: 16px;
   }
