--- a/Table_task/table.css
+++ b/Table_task/table.css
@@ -1,15 +1,41 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+body{
+    width: 100%;
+    height: 100%;
+    background-image: url("./images/html_table.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    overflow: hidden;
+}
 table{
-    width: 100%;
-    border: none;
+    width: 90%;
+    height: 60%;
+    /* border: none; */
+    margin: auto;
 }
-caption{
-    width: 100%;
+.main{
+    position: relative;
+    top: 20px;
+    bottom: 20px;
+    background-color: rgba(255, 255, 255, 0.1);
+    width: 80%;
+    height: 600px;
+    margin: auto;
+    border-radius: 10px;
 }
-form{
-    display: inline-block;
-}
-h2{
-    display: inline-block;
+.section{
+    position: sticky;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 .img{
     width: 40px;
@@ -22,12 +48,56 @@ th{
     text-align: left;
     padding: 10px;
     height: 50px;
-    background-color: hsl(0, 0%, 90%);
+    background-color:#d5d1df;
 }
 td{
     padding: 10px;
     height: 50px;
 }
 tr:nth-child(even){
-background-color: hsl(0, 0%, 90%);
+background-color: #e5d3d1;
+}
+tr:nth-child(odd){
+    background-color: #fdefe6;
+}
+button{
+    text-align: center;
+    border-radius: 20px;
+    padding: 5px 10px;
+    border: none;
+}
+.status1{
+    background-color: #87e49a;
+    color: #27853d;
+}
+.status2{
+    background-color: #d892a2;
+    color: #aa324f;
+}
+.status3{
+    background-color: #6fc9eb;
+    color: #003140;
+}
+.status4{
+    background-color: #f5cf77;
+    color: #61451e;
+}
+input[type=text]{
+    background-image: url("./images/search.png");
+    background-size: 20px;
+    background-repeat: no-repeat;
+    background-position: top 7px right 10px;
+    padding: 10px 15px;
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0.4);
+    width: 30%;
+    border: none;
+    outline: none;
+}
+.arrow{
+    background-color: #FFFFFF;
+    padding: 5px;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
 }
